# nice-colors

./: .gitignore  Cargo.toml  README.md
benches/: manipulation.rs  parse.rs
examples/: serialize.rs
src/: color.rs  helpers.rs  hsl_color.rs  html.rs  lib.rs  parse.rs  serializers.rs
