[package]
name = "nice-colors"
description = "For converting colors to and from hexadecimal, and for blending colors."
version = "0.1.0"
edition = "2021"
authors = ["Julia"]
homepage = "https://github.com/juliarose/nice-colors"
repository = "https://github.com/juliarose/nice-colors"
license = "MIT"
keywords = ["css", "color", "parser", "hexadecimal", "hsl", "rgb"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]

[dev-dependencies]
criterion = "0.3"
serde_json = "^1.0"

[[example]]
name = "serialize"
path = "examples/serialize.rs"
required-features = ["serde"]

[[bench]]
name = "parse"
harness = false
